all po files updated from develop at 2020-03-22 22:42

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -6122,6 +6122,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "العودة الى قائمة الأفلام"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8044,6 +8053,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8066,12 +8078,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #, fuzzy
@@ -8115,6 +8121,9 @@ msgid "Select your provider, and press OK to start the scan"
 msgstr ""
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select your time zone area or region."
 msgstr ""
 
 msgid "Selecting satellites 1 (USALS)"
@@ -9321,6 +9330,16 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "عرض قائمة بملحقات(إضافات) العرض وواجهة المستخدم المتاحة"
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -9926,6 +9945,16 @@ msgid "Time scale"
 msgstr "إختيار المؤقت"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "منطقه الوقت"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "منطقه الوقت"
+
+#
 msgid "Timer"
 msgstr "المؤقت"
 
@@ -10001,11 +10030,6 @@ msgstr "تحول الوقت غير ممكن"
 
 #
 msgid "Timezone"
-msgstr "منطقه الوقت"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "منطقه الوقت"
 
 msgid "Timor-Leste"
@@ -11156,6 +11180,18 @@ msgid "With errors:"
 msgstr ""
 
 msgid "With popup"
+msgstr ""
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr ""
 
 msgid "Without popup"
@@ -12491,6 +12527,9 @@ msgstr ""
 #
 msgid "vertical"
 msgstr "رأسى"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
