--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -6554,6 +6554,15 @@ msgstr "Otevřít nastavení tuneru "
 msgid "Open the movie list"
 msgstr "Otevřít seznam filmů"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8645,6 +8654,11 @@ msgstr "Zvolte satelit, který chcete konfigurovat. Po nakonfigurování tohoto 
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Vyberte satelit na který je natočena Vaše parabola. Pokud si nejste jisti, vyberte možnost 'Automaticky' a přijímač se o to pokusí zjistit sám."
 
+#
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Zvolte horizontání rozlišení:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Vyberte tuner který řídí natáčenou parabolu."
 
@@ -8668,14 +8682,6 @@ msgstr "Další rozložení znaků"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Shift pro následující znak"
-
-#
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Zvolte horizontání rozlišení:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 #
 msgid "Select update source"
@@ -8723,6 +8729,11 @@ msgstr "Zvolte poskytovatele a stiskem OK začněte prohledávat"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Vyberte svůj region. Není-li k dispozici, změňte 'Země' na 'Vše' a vyberte jednu z výchozích alternativ."
+
+#
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Zvolte horizontání rozlišení:"
 
 #
 msgid "Selecting satellites 1 (USALS)"
@@ -9982,6 +9993,17 @@ msgstr "Přepnout kanál dolů"
 msgid "Switch channel up"
 msgstr "Přepnout kanál nahoru"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Zobrazit seznam rozšíření pro zobrazení a uživatelské rozhraní"
+
 msgid "Switch to TV mode"
 msgstr "Přepnout do TV módu"
 
@@ -10613,6 +10635,16 @@ msgid "Time scale"
 msgstr "Měřítko času"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Časové pásmo"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Časové pásmo"
+
+#
 msgid "Timer"
 msgstr "Časovač"
 
@@ -10686,11 +10718,6 @@ msgstr "Timeshift není možný!"
 
 #
 msgid "Timezone"
-msgstr "Časové pásmo"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Časové pásmo"
 
 msgid "Timor-Leste"
@@ -11905,6 +11932,20 @@ msgstr "S chybami:"
 
 msgid "With popup"
 msgstr "S dialogem"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Toto nastavení umožňuje vypnout displej."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Toto nastavení umožňuje vypnout displej."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Bez dialogu"
@@ -13384,6 +13425,9 @@ msgstr "varieté"
 #
 msgid "vertical"
 msgstr "Vertikální"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
