--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -6511,6 +6511,15 @@ msgstr "Åben setup tuner"
 msgid "Open the movie list"
 msgstr "Åben filmlisten"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8600,6 +8609,10 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Vælg sorteringsmetode:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8622,13 +8635,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Vælg sorteringsmetode:"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #
@@ -8677,6 +8683,10 @@ msgstr "Vælg din udebyder, og tryk OK for at starte søgningen"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Vælg sorteringsmetode:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Vælger satellit 1 (USALS)"
@@ -9928,6 +9938,17 @@ msgstr "Skift kanal ned"
 msgid "Switch channel up"
 msgstr "Skift kanal op"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Vis oplistning af tilgængelige visnings- og brugerinterface udvidelser."
+
 msgid "Switch to TV mode"
 msgstr "Skift til TV mode"
 
@@ -10582,6 +10603,16 @@ msgid "Time scale"
 msgstr "Tidsskala"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Tidszone"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Tidszone"
+
+#
 msgid "Timer"
 msgstr "Timer"
 
@@ -10655,11 +10686,6 @@ msgstr "Tidsforskydning ikke mulig!."
 
 #
 msgid "Timezone"
-msgstr "Tidszone"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Tidszone"
 
 msgid "Timor-Leste"
@@ -11885,6 +11911,18 @@ msgstr "Med fejlene:"
 
 msgid "With popup"
 msgstr "Med popup"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Uden popup"
@@ -13345,6 +13383,9 @@ msgstr "variety show"
 #
 msgid "vertical"
 msgstr "vertikal"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
