--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2019-11-28 17:53+0100\n"
 "Last-Translator: Pike_Bishop <alfredzngr023@gmail.com>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
@@ -5718,6 +5718,15 @@ msgstr "Öffnen Sie den Setup-Tuner"
 msgid "Open the movie list"
 msgstr "Zurück zur Videoliste"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7499,6 +7508,10 @@ msgstr "Wählen Sie den Satelliten aus, den Sie konfigurieren wollen. Sobald die
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Wählen Sie den Satelliten, von dem Ihr Gerät empfängt. Wenn Sie sich nicht sicher sind, wählen Sie “automatisch” und der Empfänger wird versuchen, dies für Sie zu ermitteln."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Wählen Sie die horizontale Auflösung:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Wählen Sie den Tuner, der die motorisierte Schüssel steuert."
 
@@ -7522,13 +7535,6 @@ msgstr "Wählen Sie den Zeichensatz für die Shift Tastatur aus"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Shift nur für das nächste Zeichen benutzen"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Wählen Sie die horizontale Auflösung:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Wählen Sie eine Update-Quelle"
@@ -7569,6 +7575,10 @@ msgstr "Bitte wählen Sie den Anbieter aus und bestätigen Sie mit OK, um die Su
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Wählen Sie Ihre Region. Wenn nicht verfügbar, ändern Sie “Land” in “alle” und wählen Sie eine der Standardalternativen."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Wählen Sie die horizontale Auflösung:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Wähle Satelliten 1 (USALS)"
@@ -8669,6 +8679,16 @@ msgstr "Kanal umschalten"
 msgid "Switch channel up"
 msgstr "Kanal hochschalten"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Eine Liste der verfügbaren Display- und Userinterface-Erweiterungen anzeigen."
+
 msgid "Switch to TV mode"
 msgstr "Wechsel zum TV Modus"
 
@@ -9250,6 +9270,14 @@ msgstr "Zeit"
 msgid "Time scale"
 msgstr "Zeitskala"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Zeitzone"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Zeitzone"
+
 msgid "Timer"
 msgstr "Timer"
 
@@ -9310,10 +9338,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift nicht möglich!"
 
 msgid "Timezone"
-msgstr "Zeitzone"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Zeitzone"
 
 msgid "Timor-Leste"
@@ -10397,6 +10421,20 @@ msgstr "Mit Fehlern:"
 
 msgid "With popup"
 msgstr "mit Popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Mit dieser Option können Sie das Display ausschalten."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Mit dieser Option können Sie das Display ausschalten."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "ohne Popup"
@@ -11690,6 +11728,9 @@ msgstr "Abwechslungsreiche Sendung"
 
 msgid "vertical"
 msgstr "Vertikal"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "Warte auf CI…"
