--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -5693,6 +5693,15 @@ msgstr "Άνοιγμα ρυθμίσεων tuner "
 msgid "Open the movie list"
 msgstr "Επιστροφή στη λίστα ταινίων"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -7467,6 +7476,10 @@ msgstr "Επιλέξτε τον δορυφόρο που θέλετε να ρυθ
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Επιλέξτε τον δορυφόρο από τον οποίο λαμβάνει η δορυφορική σας κεραία. Αν δεν είστε σίγουροι επιλέξτε 'αυτόματο' και ο δέκτης θα προσπαθήσει να βρει τη σωστή ρύθμιση."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Επιλογή οριζόντιας ανάλυσης:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Επιλέξτε το tuner που ελέγχει το μοτέρ που κινεί το κάτοπτρο."
 
@@ -7490,13 +7503,6 @@ msgstr "Επιλογή του σετ χαρακτήρων με shift"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Επιλογή του σετ χαρακτήρων με shift του εικονικού πληκτρολογίου μόνο για τον επόμενο χαρακτήρα"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Επιλογή οριζόντιας ανάλυσης:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Επιλογή πηγής ενημερώσεων"
@@ -7537,6 +7543,10 @@ msgstr "Επιλέξτε πάροχο, και πιέστε ΟΚ για να ξε
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Επιλέξτε την περιοχή σας. Αν δεν είναι διαθέσιμη αλλάξτε τη χώρα σε 'όλες' και επιλέξτε μία από τις προρυθμισμένες εναλλακτικές."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Επιλογή οριζόντιας ανάλυσης:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Επιλογή δορυφόρων 1 (USALS)"
@@ -8632,6 +8642,16 @@ msgstr "Μεταφορά καναλιού προς τα κάτω"
 msgid "Switch channel up"
 msgstr "Μεταφορά καναλιού προς τα επάνω"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Εμφάνιση λίστας διαθέσιμων επεκτάσεων οθόνης και διεπαφής χρήστη."
+
 msgid "Switch to TV mode"
 msgstr "Αλλαγή σε λειτουργία TV"
 
@@ -9211,6 +9231,14 @@ msgstr "Ώρα"
 msgid "Time scale"
 msgstr "Χρονική κλιμάκωση"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Χρονική ζώνη"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Χρονική ζώνη"
+
 msgid "Timer"
 msgstr "Χρονοδιακόπτης"
 
@@ -9270,10 +9298,6 @@ msgid "Timeshift not possible!"
 msgstr "Αδυναμία χρονομετατόπισης!"
 
 msgid "Timezone"
-msgstr "Χρονική ζώνη"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Χρονική ζώνη"
 
 msgid "Timor-Leste"
@@ -10351,6 +10375,20 @@ msgstr "Με σφάλματα:"
 
 msgid "With popup"
 msgstr "Με αναδυόμενο παράθυρο"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Αυτή η επιλογή επιτρέπει την απενεργοποίηση της οθόνης πρόσοψης."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Αυτή η επιλογή επιτρέπει την απενεργοποίηση της οθόνης πρόσοψης."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Χωρίς αναδυόμενο παράθυρο"
@@ -11636,6 +11674,9 @@ msgstr "βαριετέ"
 
 msgid "vertical"
 msgstr "κάθετη"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "αναμονή γα κοινή διεπαφή (ci)..."
