--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:09+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2020-03-17 01:28+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -6362,6 +6362,15 @@ msgstr "Abrir sintonizador de configuración"
 msgid "Open the movie list"
 msgstr "Abrir la lista de películas"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -8379,6 +8388,10 @@ msgstr "Seleccione el satélite que desea configurar. Una vez que el satélite e
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Selecciona el satélite que recibe tu plato. Si no está seguro, seleccione ‘automático’ y el receptor intentará determinarlo por usted."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Seleccione la resolución horizontal:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Seleccione el sintonizador que controla el plato motorizado."
 
@@ -8402,13 +8415,6 @@ msgstr "Seleccione el teclado virtual cambiado el conjunto de caracteres"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Seleccione el teclado virtual cambiado el conjunto de caracteres solo"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Seleccione la resolución horizontal:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 #
 msgid "Select update source"
@@ -8455,6 +8461,10 @@ msgstr "Seleccione su proveedor y pulse OK para iniciar la exploración"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Seleccione su región. Si no está disponible, cambie “País” a “todos” y seleccione una de las alternativas predeterminadas."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Seleccione la resolución horizontal:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Selección de satélites 1 (USALS)"
@@ -9669,6 +9679,17 @@ msgstr "Cambiar canal hacia abajo"
 msgid "Switch channel up"
 msgstr "Cambiar canal"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ver la lista de extensiones de pantalla y de interfaz de usuario disponibles."
+
 msgid "Switch to TV mode"
 msgstr "Cambiar al modo de TV"
 
@@ -10310,6 +10331,16 @@ msgid "Time scale"
 msgstr "Escala de tiempo"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Zona horaria"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Zona horaria"
+
+#
 msgid "Timer"
 msgstr "Grabación"
 
@@ -10383,11 +10414,6 @@ msgstr "¡Pausa no posible!"
 
 #
 msgid "Timezone"
-msgstr "Zona horaria"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Zona horaria"
 
 msgid "Timor-Leste"
@@ -11577,6 +11603,20 @@ msgstr "Con errores:"
 
 msgid "With popup"
 msgstr "Con popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Esta opción le permite apagar la pantalla."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Esta opción le permite apagar la pantalla."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Sin popup"
@@ -13017,6 +13057,9 @@ msgstr "Espectáculo de variedades"
 #
 msgid "vertical"
 msgstr "vertical"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
