--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2019-02-13 20:52+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -6367,6 +6367,15 @@ msgstr "Avaa viritinasetukset"
 msgid "Open the movie list"
 msgstr "Avaa tallenneluettelo"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8416,6 +8425,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Valitse viritin joka ohjaa moottoroitua lautasta."
 
@@ -8438,12 +8450,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #
@@ -8491,6 +8497,9 @@ msgstr "Valitse palveluntarjoaja ja aloita haku OK-näppäimellä"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Valitse käytettävä alue. Jos sopivaa ei löydy, vaihda maaksi 'Kaikki' ja valitse jokin oletusvaihtoehdoista."
+
+msgid "Select your time zone area or region."
+msgstr ""
 
 #
 msgid "Selecting satellites 1 (USALS)"
@@ -9734,6 +9743,16 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Näytä saatavilla olevat näyttö- ja käyttöliittymälaajennukset."
+
 #
 msgid "Switch to TV mode"
 msgstr "Vaihda TV-tilaan"
@@ -10361,6 +10380,16 @@ msgstr "Aika-asetukset"
 msgid "Time scale"
 msgstr "Aika-asteikko"
 
+#
+#, fuzzy
+msgid "Time zone"
+msgstr "Aikavyöhyke"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Aikavyöhyke"
+
 msgid "Timer"
 msgstr "Ajastukset"
 
@@ -10434,11 +10463,6 @@ msgstr "Ajansiirtotallennusta ei voida käyttää."
 
 #
 msgid "Timezone"
-msgstr "Aikavyöhyke"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Aikavyöhyke"
 
 msgid "Timor-Leste"
@@ -11629,6 +11653,18 @@ msgstr ""
 
 msgid "With popup"
 msgstr "Ilmoitusikkunalla"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Ilman ilmoitusikkunaa"
@@ -13075,6 +13111,9 @@ msgstr "varietee"
 #
 msgid "vertical"
 msgstr "Vertikaali"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
