--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
-"PO-Revision-Date: 2020-03-21 09:12+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
+"PO-Revision-Date: 2020-03-22 22:42+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -5689,6 +5689,15 @@ msgstr "Ouvrir la configuration du tuner "
 msgid "Open the movie list"
 msgstr "Ouvrir la liste de films"
 
+msgid "Operating LED status in deep standby mode"
+msgstr "État de la LED de fonctionnement en veille profonde"
+
+msgid "Operating LED status in standby mode"
+msgstr "État de la LED de fonctionnement en veille"
+
+msgid "Operating LED status while running."
+msgstr "État de la LED de fonctionnement en activité"
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -7463,6 +7472,9 @@ msgstr "Sélectionnez le satellite que vous voulez configurer. Lorsque ce satell
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Sélectionnez le satellite que reçoit votre antenne. Si vous n’êtes pas certains choisissez ‘automatique’ et le receveur va essayer de déterminer ceci pour vous."
 
+msgid "Select the time zone within the area or region."
+msgstr "Sélectionnez le fuseau horaire dans la zone ou la région."
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Sélectionnez le tuner qui contrôle l’antenne motorisée."
 
@@ -7486,12 +7498,6 @@ msgstr "Sélectionnez le jeu de caractères décalé du clavier virtuel"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Sélectionnez le clavier virtuel décalé pour le caractère suivant uniquement"
-
-msgid "Select timezone area or region."
-msgstr "Sélectionner votre fuseau horaire ou votre région."
-
-msgid "Select timezone in the area or region."
-msgstr "Sélectionnez la fuseau horaire ou la région."
 
 msgid "Select update source"
 msgstr "Sélectionnez la source de mise à jour"
@@ -7532,6 +7538,9 @@ msgstr "Sélectionnez votre opérateur, et appuyez sur OK pour lancer la recherc
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Sélectionnez votre région. Si non disponible changer ‘Pays’ à ‘tous’ et sélectionnez une des alternatives par défaut."
+
+msgid "Select your time zone area or region."
+msgstr "Sélectionnez votre fuseau horaire ou région."
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Sélectionner satellites 1 (USALS)"
@@ -8627,6 +8636,15 @@ msgstr "Basculer vers la chaîne suivante"
 msgid "Switch channel up"
 msgstr "Basculer vers la chaîne précédente"
 
+msgid "Switch off the display during Standby Mode"
+msgstr "Éteindre l’écran en mode veille"
+
+msgid "Switch off the display during Suspend Mode"
+msgstr "Eteindre l’affichage pendant la veille profonde"
+
+msgid "Switch off the display during operation."
+msgstr "Eteindre l’affichage en fonctionnement."
+
 msgid "Switch to TV mode"
 msgstr "Basculer en mode TV"
 
@@ -8713,7 +8731,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 21-03-2020"
+"Dernière MAJ: 22-03-2020"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -9213,6 +9231,12 @@ msgstr "Heure"
 msgid "Time scale"
 msgstr "Echelle de temps"
 
+msgid "Time zone"
+msgstr "Fuseau horaire"
+
+msgid "Time zone area"
+msgstr "Zone horaire"
+
 msgid "Timer"
 msgstr "Programmation"
 
@@ -9272,9 +9296,6 @@ msgid "Timeshift not possible!"
 msgstr "PauseDirect impossible!"
 
 msgid "Timezone"
-msgstr "Fuseau horaire"
-
-msgid "Timezone area"
 msgstr "Fuseau horaire"
 
 msgid "Timor-Leste"
@@ -10356,6 +10377,18 @@ msgstr "Avec erreurs:"
 
 msgid "With popup"
 msgstr "Avec le popup"
+
+msgid "With this option you can switch off the display during operation."
+msgstr "Avec cette option, vous pouvez éteindre l’affichage en fonctionnement."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr "Avec cette option vous pouvez désactiver l’écran en mode veille profonde."
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Avec cette option, vous pouvez désactiver l’affichage en mode veille."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr "Avec cette option, vous pouvez changer la couleur LED ou désactiver la LED."
 
 msgid "Without popup"
 msgstr "Sans le popup"
@@ -11643,6 +11676,9 @@ msgstr "Spectacle de variété"
 
 msgid "vertical"
 msgstr "Verticale"
+
+msgid "violet"
+msgstr "violet"
 
 msgid "wait for ci..."
 msgstr "Attente pour ci..."
