--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -6573,6 +6573,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Werom nei de film lyst"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8694,6 +8703,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8716,12 +8728,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #
@@ -8769,6 +8775,9 @@ msgid "Select your provider, and press OK to start the scan"
 msgstr ""
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select your time zone area or region."
 msgstr ""
 
 msgid "Selecting satellites 1 (USALS)"
@@ -10051,6 +10060,15 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+msgid "Switch off the display during operation."
+msgstr ""
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -10676,6 +10694,16 @@ msgid "Time scale"
 msgstr "Tiidsbarren seleksje"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Tiidszone"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Tiidszone"
+
+#
 msgid "Timer"
 msgstr "Tiidssjtoering"
 
@@ -10754,11 +10782,6 @@ msgstr "Tiidsskowen is net mooglik !"
 
 #
 msgid "Timezone"
-msgstr "Tiidszone"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Tiidszone"
 
 msgid "Timor-Leste"
@@ -11988,6 +12011,18 @@ msgid "With errors:"
 msgstr ""
 
 msgid "With popup"
+msgstr ""
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr ""
 
 msgid "Without popup"
@@ -13420,6 +13455,9 @@ msgstr ""
 #
 msgid "vertical"
 msgstr "ferticaal"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
