--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -5841,6 +5841,15 @@ msgstr "Buka pengaturan penala"
 msgid "Open the movie list"
 msgstr "Buka daftar film"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7658,6 +7667,10 @@ msgstr "Pilih satelit yg ingin anda setel. Setelah satelit tsb disetel, anda bis
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Pilih satelit yg diterima parabola anda. Jika anda tidak yakin, pilih 'otomatis' dan Rx akan mencoba menentukannya untuk anda."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Pilih resolusi horizontal:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Pilih penala yang mengatur parabola bergerak."
 
@@ -7682,13 +7695,6 @@ msgstr "Pilih set karakter geser pada papankunci virtual"
 #, fuzzy
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Pilih set karakter geser pada papankunci virtual"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Pilih resolusi horizontal:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Pilih sumber update"
@@ -7730,6 +7736,10 @@ msgstr "Pilih provider anda, dan tekan OK untuk mulai pelacakan"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Pilih wilayah anda. Jika tidak tersedia, ganti 'Negara' ke 'semua' dan pilih satu dari alternatif bawaan."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Pilih resolusi horizontal:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Memilih satelit 1 (USALS)"
@@ -8850,6 +8860,16 @@ msgstr "Ganti kanal bawah"
 msgid "Switch channel up"
 msgstr "Ganti kanal atas"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Tinjau daftar ketersedaan ekstensi penampil dan antarmuka pengguna."
+
 msgid "Switch to TV mode"
 msgstr "Beralih ke mode TV"
 
@@ -9438,6 +9458,14 @@ msgstr "Waktu"
 msgid "Time scale"
 msgstr "Rentang waktu"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Zona Waktu"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Zona Waktu"
+
 msgid "Timer"
 msgstr "Pewaktu"
 
@@ -9498,10 +9526,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift tidak memungkinkan!"
 
 msgid "Timezone"
-msgstr "Zona Waktu"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Zona Waktu"
 
 msgid "Timor-Leste"
@@ -10604,6 +10628,20 @@ msgstr "Dengan kesalahan:"
 
 msgid "With popup"
 msgstr "Dengan popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Pilihan ini memungkinkan anda untuk mematikan layar."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Pilihan ini memungkinkan anda untuk mematikan layar."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Tanpa popup"
@@ -11914,6 +11952,9 @@ msgstr "variety show"
 
 msgid "vertical"
 msgstr "vertical"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "mengunggu ci..."
