--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2018-05-22 13:54+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -5705,6 +5705,15 @@ msgstr "Accedere alla configurazione del sintonizzatore "
 msgid "Open the movie list"
 msgstr "Aprire l'elenco dei video"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7482,6 +7491,10 @@ msgstr "Selezionare il satellite che si desidera configurare. Dopo aver impostat
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Selezionare il satellite dal quale la parabola riceve il segnale. Nel dubbio selezionare \"Automatico\" e il ricevitore tenterà di individuarlo da solo."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Selezionare la risoluzione orizzontale:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Selezionare il sintonizzatore che controlla la parabola motorizzata."
 
@@ -7505,13 +7518,6 @@ msgstr "Selezionare il set di caratteri spostati dalla tastiera virtuale"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Selezionare il set di caratteri con spostamento della tastiera virtuale solo per il carattere successivo"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Selezionare la risoluzione orizzontale:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Selezionare l'origine degli aggiornamenti"
@@ -7552,6 +7558,10 @@ msgstr "Selezionare il provider e premere OK per avviare la ricerca"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Selezionare la regione. Se non è presente modificare il \"Paese\" in \"Tutti\" e selezionare una delle alternative predefinite."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Selezionare la risoluzione orizzontale:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Selezionare i satelliti 1 (USALS)"
@@ -8648,6 +8658,16 @@ msgstr "Passare al canale precedente"
 msgid "Switch channel up"
 msgstr "Passare al canale successivo"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Mostrare l'elenco delle estensioni disponibili per lo schermo e l'interfaccia utente."
+
 msgid "Switch to TV mode"
 msgstr "Passare alla modalità TV"
 
@@ -9240,6 +9260,14 @@ msgstr "Orario"
 msgid "Time scale"
 msgstr "Scala del tempo"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Fuso orario"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Fuso orario"
+
 msgid "Timer"
 msgstr "Timer"
 
@@ -9300,10 +9328,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift impossibile!"
 
 msgid "Timezone"
-msgstr "Fuso orario"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Fuso orario"
 
 msgid "Timor-Leste"
@@ -10385,6 +10409,20 @@ msgstr "Con gli errori:"
 
 msgid "With popup"
 msgstr "Con un popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Questa opzione consente di spegnere il display."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Questa opzione consente di spegnere il display."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Senza un popup"
@@ -11675,6 +11713,9 @@ msgstr "Varietà"
 
 msgid "vertical"
 msgstr "Verticale"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "In attesa della CI..."
