--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -5903,6 +5903,15 @@ msgstr "Open tunerinstellingen "
 msgid "Open the movie list"
 msgstr "Open de opnamelijst"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -7706,6 +7715,10 @@ msgstr "Kies de satelliet die u wilt configureren. Zodra deze satelliet is gecon
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Kies de satelliet die door uw schotel ontvangen wordt. Bij twijfel kies dan voor 'automatisch' en de ontvanger zal proberen om deze automatisch te bepalen."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Kies de horizontale resolutie:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Kies de tuner die de gemotoriseerde schotel aanstuurt."
 
@@ -7729,13 +7742,6 @@ msgstr "Kies de variabele tekenset op het virtuele toetsenbord"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Kies enkel voor het volgende teken de variabele tekenset op het virtuele toetsenbord"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Kies de horizontale resolutie:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Kies de bron om te updaten"
@@ -7777,6 +7783,10 @@ msgstr "Kies uw provider en druk op 'Ok' om de scan te starten."
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Kies uw regio. Indien niet beschikbaar wijzig dan het land naar 'alle' en kies één van de aanwezige alternatieven."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Kies de horizontale resolutie:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Kies satelieten1 (USALS)"
@@ -8881,6 +8891,16 @@ msgstr "Schakel een zender terug"
 msgid "Switch channel up"
 msgstr "Schakel een zender verder"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Bekijk het overzicht van de beschikbare display- en gebruikersinterface applicaties."
+
 msgid "Switch to TV mode"
 msgstr "Schakel naar de TV modus"
 
@@ -9479,6 +9499,14 @@ msgstr "Tijd"
 msgid "Time scale"
 msgstr "Tijdschaal"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Tijdzone"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Tijdzone"
+
 msgid "Timer"
 msgstr "Timer"
 
@@ -9538,10 +9566,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift is niet mogelijk!"
 
 msgid "Timezone"
-msgstr "Tijdzone"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Tijdzone"
 
 msgid "Timor-Leste"
@@ -10663,6 +10687,20 @@ msgstr "Met fouten:"
 
 msgid "With popup"
 msgstr "Met popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Deze instelling biedt de optie om het display uit te schakelen."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Deze instelling biedt de optie om het display uit te schakelen."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Zonder popup"
@@ -11956,6 +11994,9 @@ msgstr "Variété/Show"
 
 msgid "vertical"
 msgstr "verticaal"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "wacht op CI..."
