--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -6314,6 +6314,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Åpne spillisten"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8284,6 +8293,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8306,12 +8318,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 msgid "Select update source"
@@ -8357,6 +8363,9 @@ msgid "Select your provider, and press OK to start the scan"
 msgstr "Velg leverandør og trykk OK for å starte søk"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select your time zone area or region."
 msgstr ""
 
 msgid "Selecting satellites 1 (USALS)"
@@ -9571,6 +9580,16 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Vis en liste over alle brukergrensesnitt og skjermvalg"
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -10179,6 +10198,16 @@ msgid "Time scale"
 msgstr "Tids måler"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Tidssone"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Tidssone"
+
+#
 msgid "Timer"
 msgstr "Tidtaker"
 
@@ -10253,11 +10282,6 @@ msgstr "Timeshift er ikke mulig!"
 
 #
 msgid "Timezone"
-msgstr "Tidssone"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Tidssone"
 
 msgid "Timor-Leste"
@@ -11435,6 +11459,18 @@ msgstr ""
 
 msgid "With popup"
 msgstr "Med varsel"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Uten varsel"
@@ -12870,6 +12906,9 @@ msgstr "varieté show"
 #
 msgid "vertical"
 msgstr "vertikal"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
