--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -6609,6 +6609,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Voltar à Lista de Filmes"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8753,6 +8762,10 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Seleccione método de ordenação:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8775,13 +8788,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Seleccione método de ordenação:"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #
@@ -8832,6 +8838,10 @@ msgstr "Seleccione o seu operador, e pressione OK para iniciar a pesquisa"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Seleccione método de ordenação:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr ""
@@ -10135,6 +10145,17 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ver lista de extensões de ecrã e interface de utilizador disponíveis"
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -10777,6 +10798,16 @@ msgid "Time scale"
 msgstr "Escala de tempo"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Zona horária"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Zona horária"
+
+#
 msgid "Timer"
 msgstr "Agendamentos"
 
@@ -10854,11 +10885,6 @@ msgstr "Timeshift não permitido!"
 
 #
 msgid "Timezone"
-msgstr "Zona horária"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Zona horária"
 
 msgid "Timor-Leste"
@@ -12114,6 +12140,18 @@ msgstr ""
 
 msgid "With popup"
 msgstr "Com janela"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Sem janela"
@@ -13578,6 +13616,9 @@ msgstr "espectáculos variados"
 #
 msgid "vertical"
 msgstr "vertical"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
