--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -5873,6 +5873,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Revenire la lista de filme"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7721,6 +7730,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -7743,12 +7755,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #, fuzzy
@@ -7791,6 +7797,9 @@ msgid "Select your provider, and press OK to start the scan"
 msgstr ""
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select your time zone area or region."
 msgstr ""
 
 msgid "Selecting satellites 1 (USALS)"
@@ -8949,6 +8958,16 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Vezi lista cu Display disponibile si extemsiile Interfata user"
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -9514,6 +9533,14 @@ msgstr "Ora"
 msgid "Time scale"
 msgstr "Selectare timer"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Zona de fus orar"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Zona de fus orar"
+
 msgid "Timer"
 msgstr "Timer"
 
@@ -9578,10 +9605,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift nu este posibil!"
 
 msgid "Timezone"
-msgstr "Zona de fus orar"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Zona de fus orar"
 
 msgid "Timor-Leste"
@@ -10687,6 +10710,18 @@ msgid "With errors:"
 msgstr ""
 
 msgid "With popup"
+msgstr ""
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr ""
 
 msgid "Without popup"
@@ -11955,6 +11990,9 @@ msgstr ""
 
 msgid "vertical"
 msgstr "vertical"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "asteapta ci..."
