--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2020-02-10 12:49+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -5713,6 +5713,15 @@ msgstr "Otvoriť nastavenia tunera "
 msgid "Open the movie list"
 msgstr "Otvoriť zoznam filmov"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr "Opkg"
 
@@ -7488,6 +7497,10 @@ msgstr "Vyberte satelit, ktorý chcete nastaviť. Po tom, čo bude tento satelit
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Vyberte satelit, ktorý sa prijíma z vašej paraboly. Ak si nie ste istý, vyberte voľbu 'automaticky', prijímač sa to pokúsi zistiť za vás."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Voľba horizontálneho rozlíšenia:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Vyberte tuner, ktorý ovláda motorizovanú parabolu."
 
@@ -7511,13 +7524,6 @@ msgstr "Vyberte znakovú sadu virtuálnej klávesnice po stlačení klávesy Shi
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Vyberte znakovú sadu virtuálnej klávesnice po stlačení klávesy Shift iba pre ďalší znak"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Voľba horizontálneho rozlíšenia:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Zvoľte zdroj aktualizácie"
@@ -7558,6 +7564,10 @@ msgstr "Vyberte poskytovateľa a stlačte OK pre spustenie skenovania"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Vyberte váš región. Ak nie je dostupný, zmeňte krajinu na 'všetky' a zvolte jeden z predvolených alternatív."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Voľba horizontálneho rozlíšenia:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Výber satelitov 1 (USALS)"
@@ -8653,6 +8663,16 @@ msgstr "Prepnúť kanál dozadu"
 msgid "Switch channel up"
 msgstr "Prepnúť kanál dopredu"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Zobraziť zoznam dostupných rozšírení zobrazenia a užívateľského rozhrania."
+
 msgid "Switch to TV mode"
 msgstr "Prepnúť na mód TV"
 
@@ -9233,6 +9253,14 @@ msgstr "Čas"
 msgid "Time scale"
 msgstr "Časová mierka"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Časové pásmo"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Časové pásmo"
+
 msgid "Timer"
 msgstr "Časovač"
 
@@ -9292,10 +9320,6 @@ msgid "Timeshift not possible!"
 msgstr "Časový posun nie je možný!"
 
 msgid "Timezone"
-msgstr "Časové pásmo"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Časové pásmo"
 
 msgid "Timor-Leste"
@@ -10372,6 +10396,20 @@ msgstr "S chybami:"
 
 msgid "With popup"
 msgstr "S vyskakovacím oknom"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Táto voľba umožňuje vypnutie obrazovky."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Táto voľba umožňuje vypnutie obrazovky."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Bez vyskakovacieho okna"
@@ -11659,6 +11697,9 @@ msgstr "varieté"
 
 msgid "vertical"
 msgstr "vertikálna"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "čakať na ci..."
