--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -6609,6 +6609,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Odprtje seznama posnetkov"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8741,6 +8750,11 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Izbor načina razvrščanja:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8763,14 +8777,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Izbor načina razvrščanja:"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #
@@ -8820,6 +8826,11 @@ msgstr "Izberite vašega operaterja in za začetek iskanja pritisnite OK!"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Izbor načina razvrščanja:"
 
 #
 msgid "Selecting satellites 1 (USALS)"
@@ -10118,6 +10129,17 @@ msgstr "Preklop na prejšnji kanal"
 msgid "Switch channel up"
 msgstr "Preklop na naslednji kanal"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ogled seznama obstoječih Display in UserInterface vtičnikov."
+
 msgid "Switch to TV mode"
 msgstr "Preklop v način TV"
 
@@ -10738,6 +10760,16 @@ msgid "Time scale"
 msgstr "Izbira časovnika"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Časovni pas"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Časovni pas"
+
+#
 msgid "Timer"
 msgstr "Časovniki"
 
@@ -10813,11 +10845,6 @@ msgstr "Časovni zamik ni možen!"
 
 #
 msgid "Timezone"
-msgstr "Časovni pas"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Časovni pas"
 
 msgid "Timor-Leste"
@@ -12048,6 +12075,18 @@ msgstr ""
 
 msgid "With popup"
 msgstr "Z obvestilom"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Brez obvestila"
@@ -13517,6 +13556,9 @@ msgstr ""
 #
 msgid "vertical"
 msgstr "Vertikalna"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
