--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -6482,6 +6482,15 @@ msgstr "Öppna inställning för tuner"
 msgid "Open the movie list"
 msgstr "Öppna filmlistan"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -8559,6 +8568,10 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Välj sorteringsmetod :"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -8581,13 +8594,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Välj sorteringsmetod :"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 #
@@ -8636,6 +8642,10 @@ msgstr "Välj din operatör och tryck OK för att starta sökningen"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Välj sorteringsmetod :"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Väljer satelliter 1 (USALS)"
@@ -9884,6 +9894,17 @@ msgstr "Växla kanal ner"
 msgid "Switch channel up"
 msgstr "Växla kanal upp"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Visa lista över tillgängliga Display och Användargränssnittutökningar."
+
 msgid "Switch to TV mode"
 msgstr "Växla till TV läge"
 
@@ -10546,6 +10567,16 @@ msgid "Time scale"
 msgstr "Tidskala"
 
 #
+#, fuzzy
+msgid "Time zone"
+msgstr "Tidszon"
+
+#
+#, fuzzy
+msgid "Time zone area"
+msgstr "Tidszon"
+
+#
 msgid "Timer"
 msgstr "Timer"
 
@@ -10619,11 +10650,6 @@ msgstr "Timeshift inte möjligt!"
 
 #
 msgid "Timezone"
-msgstr "Tidszon"
-
-#
-#, fuzzy
-msgid "Timezone area"
 msgstr "Tidszon"
 
 msgid "Timor-Leste"
@@ -11846,6 +11872,20 @@ msgstr "Med fel :"
 
 msgid "With popup"
 msgstr "Med popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Detta val tillåter dig att stänga av displayen."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Detta val tillåter dig att stänga av displayen."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Utan popup"
@@ -13319,6 +13359,9 @@ msgstr "variteuppvisning"
 #
 msgid "vertical"
 msgstr "vertikal"
+
+msgid "violet"
+msgstr ""
 
 #
 msgid "wait for ci..."
