--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -5787,6 +5787,15 @@ msgstr "Tuner Kurulumu"
 msgid "Open the movie list"
 msgstr "Film listesinden aç"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7604,6 +7613,10 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Seçileni sıralama yöntemi:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -7626,13 +7639,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Seçileni sıralama yöntemi:"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 msgid "Select update source"
@@ -7675,6 +7681,10 @@ msgstr "Sağlayıcı seçin ve taramayı başlatmak için OK tuşuna basın"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Seçileni sıralama yöntemi:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Seçilen uydular 1 (USALS)"
@@ -8794,6 +8804,16 @@ msgstr "Kanal Aşağı"
 msgid "Switch channel up"
 msgstr "Kanal Yukarı"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ekran ve kullanıcı arayüzü eklentilerini listele."
+
 msgid "Switch to TV mode"
 msgstr "TV moduna geç"
 
@@ -9377,6 +9397,14 @@ msgstr "Zaman"
 msgid "Time scale"
 msgstr "Zaman cetveli"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Zaman dilimi"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Zaman dilimi"
+
 msgid "Timer"
 msgstr "Zamanlayıcı"
 
@@ -9437,10 +9465,6 @@ msgid "Timeshift not possible!"
 msgstr "Zaman kaydırıcı kullanılamaz!"
 
 msgid "Timezone"
-msgstr "Zaman dilimi"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Zaman dilimi"
 
 msgid "Timor-Leste"
@@ -10542,6 +10566,18 @@ msgstr ""
 
 msgid "With popup"
 msgstr "Açılır Pencerede ile"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Açılır Pencerede olmadan"
@@ -11837,6 +11873,9 @@ msgstr "Çeşitli Gösteri"
 
 msgid "vertical"
 msgstr "Düşey (V)"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "CI bekleniyor..."
