--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2016-06-17 12:13+0800\n"
 "Last-Translator: nx111 <gdzdz@163.com>\n"
 "Language-Team: NEWBOLT\n"
@@ -5720,6 +5720,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr ""
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7526,6 +7535,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -7548,12 +7560,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 msgid "Select update source"
@@ -7595,6 +7601,9 @@ msgid "Select your provider, and press OK to start the scan"
 msgstr "选择供应商，按OK开始扫描"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select your time zone area or region."
 msgstr ""
 
 msgid "Selecting satellites 1 (USALS)"
@@ -8705,6 +8714,15 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+msgid "Switch off the display during operation."
+msgstr ""
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -9239,6 +9257,14 @@ msgstr "时间"
 msgid "Time scale"
 msgstr ""
 
+#, fuzzy
+msgid "Time zone"
+msgstr "时区"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "时区"
+
 msgid "Timer"
 msgstr "定时器"
 
@@ -9299,10 +9325,6 @@ msgid "Timeshift not possible!"
 msgstr "不能时光平移!"
 
 msgid "Timezone"
-msgstr "时区"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "时区"
 
 msgid "Timor-Leste"
@@ -10373,6 +10395,18 @@ msgid "With errors:"
 msgstr ""
 
 msgid "With popup"
+msgstr ""
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr ""
 
 msgid "Without popup"
@@ -11647,6 +11681,9 @@ msgstr ""
 
 msgid "vertical"
 msgstr "垂直"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "等待CI..."
