--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -5719,6 +5719,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr ""
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7527,6 +7536,10 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "選擇位置:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -7549,13 +7562,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "選擇位置:"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 msgid "Select update source"
@@ -7598,6 +7604,10 @@ msgstr ""
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "選擇位置:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr ""
@@ -8713,6 +8723,15 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+msgid "Switch off the display during operation."
+msgstr ""
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -9249,6 +9268,14 @@ msgstr "時間"
 msgid "Time scale"
 msgstr ""
 
+#, fuzzy
+msgid "Time zone"
+msgstr "時區"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "時區"
+
 msgid "Timer"
 msgstr "計時器"
 
@@ -9309,10 +9336,6 @@ msgid "Timeshift not possible!"
 msgstr "不能時光平移!"
 
 msgid "Timezone"
-msgstr "時區"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "時區"
 
 msgid "Timor-Leste"
@@ -10381,6 +10404,18 @@ msgid "With errors:"
 msgstr ""
 
 msgid "With popup"
+msgstr ""
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr ""
 
 msgid "Without popup"
@@ -11654,6 +11689,9 @@ msgstr ""
 
 msgid "vertical"
 msgstr "垂直"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "等待CI..."
