--- a/po/lt.po
+++ b/po/lt.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
-"PO-Revision-Date: 2020-02-29 08:52+0200\n"
+"POT-Creation-Date: 2020-03-22 22:41+0100\n"
+"PO-Revision-Date: 2020-03-21 11:23+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
 "Language: lt_LT\n"
@@ -3078,7 +3078,7 @@ msgstr "KLAIDA - paieška nepavyko (%s)!"
 
 #, python-format
 msgid "ERROR downloading file %s"
-msgstr ""
+msgstr "KLAIDA, parsiunčiant failą %s"
 
 msgid "East"
 msgstr "Rytai"
@@ -3362,9 +3362,9 @@ msgstr "Eritrėja"
 msgid "Error"
 msgstr "Klaida"
 
-#, fuzzy, python-format
+#, python-format
 msgid "Error %s"
-msgstr "Klaida"
+msgstr "Klaida %s"
 
 msgid "Error code"
 msgstr "Klaidos kodas"
@@ -3399,13 +3399,10 @@ msgid "Error stop stream!"
 msgstr "Srauto stabdymo klaida!"
 
 msgid "Error when writing epg.dat on server"
-msgstr ""
+msgstr "Klaida, įrašant epg.dat serveryje"
 
-#, fuzzy
 msgid "Error while retreiving epg.dat from server"
-msgstr ""
-"Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
-"%s"
+msgstr "Klaida, ieškant epg.data iš serverio"
 
 #, python-format
 msgid ""
@@ -3415,11 +3412,8 @@ msgstr ""
 "Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
 "%s"
 
-#, fuzzy
 msgid "Error while retreiving location of epg.dat on server"
-msgstr ""
-"Klaida atsisiunčiant atsarginio imtuvo laikmačio informaciją\n"
-"%s"
+msgstr "Klaida atkūrus epg.dat vietą serveryje"
 
 #, python-format
 msgid ""
@@ -5427,7 +5421,7 @@ msgid "No displayable files on this medium found!"
 msgstr "Jokių failų čia nerasta!"
 
 msgid "No epg.dat file found server"
-msgstr ""
+msgstr "Failo epg.dat serveryje nerasta"
 
 msgid "No event info found, recording indefinitely."
 msgstr "Informacija apie įvykius nerasta, tęsiamas įrašymas."
@@ -5709,6 +5703,15 @@ msgstr "Atidaryti imtuvo konfigūravimą "
 
 msgid "Open the movie list"
 msgstr "Atidaryti filmų sąrašą"
+
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
 
 msgid "Opkg"
 msgstr "Opkg"
@@ -7487,6 +7490,10 @@ msgstr "Pasirinkite palydovą, kurį norite konfigūruoti. Kai šis palydovas bu
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Pasirinkite palydovą, kurį jūsų antena gauna. Jei nesate tikri, pasirinkite 'automatinis' ir imtuvas bandys tai nustatyti pats."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Pasirinkite laiko juostą, savo srityje arba regione."
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Pasirinkite imtuvą, kuris kontroliuoja motorizuotą anteną."
 
@@ -7510,13 +7517,6 @@ msgstr "Pasirinkite simbolių rinkinį su virtualia klaviatūra"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Pasirinkite tik pakeistą virtualios klaviatūros simbolių rinkinį"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Pasirinkite horizontalią rezoliuciją:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Pasirinkite atnaujinimo šaltinį"
@@ -7557,6 +7557,10 @@ msgstr "Pasirinkite tiekėją ir paieškai pradėti, spauskite OK"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Pasirinkite savo regioną. Jei negalima, pakeiskite 'Šalis' į 'visos' ir pasirinkite vieną iš numatytųjų alternatyvų."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Pasirinkite laiko juostos sritį arba regioną."
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Pasirenkami palydovai 1 (USALS)"
@@ -8654,6 +8658,16 @@ msgstr "Perjungti kanalą žemyn"
 msgid "Switch channel up"
 msgstr "Perjungti kanalą aukštyn"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Peržiūrėti sąrašą prieinamų monitoriaus ir vartotojo sąsajos priedų."
+
 msgid "Switch to TV mode"
 msgstr "Perjungti į TV režimą"
 
@@ -8733,7 +8747,7 @@ msgstr "T2MI RAW režimas"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "P&C Adga, adga45@gmail.com\n"
-"Pasvalys, 2020-02-29 versija"
+"Pasvalys, 2020-03-21 versija"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS failas per didelis 1 lygio ISO9660!"
@@ -9233,6 +9247,14 @@ msgstr "Laikas"
 msgid "Time scale"
 msgstr "Laiko skalė"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Laiko juosta"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Laiko juostos sritis"
+
 msgid "Timer"
 msgstr "Laikmatis"
 
@@ -9292,10 +9314,6 @@ msgid "Timeshift not possible!"
 msgstr "Laiko poslinkis negalimas!"
 
 msgid "Timezone"
-msgstr "Laiko juosta"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Laiko juosta"
 
 msgid "Timor-Leste"
@@ -10374,6 +10392,20 @@ msgstr "Su klaidomis:"
 
 msgid "With popup"
 msgstr "Su iškylančiu pranešimu"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Ši parinktis leidžia jums išsijungti ekraną."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Ši parinktis leidžia jums išsijungti ekraną."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Be iškylančio pranešimo"
@@ -11663,6 +11695,9 @@ msgstr "įvairūs šou"
 
 msgid "vertical"
 msgstr "vertikali"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "laukite CI atsako..."
