--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2019-12-03 20:02+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -5726,6 +5726,15 @@ msgstr "Otwórz konfiguracje tunera"
 msgid "Open the movie list"
 msgstr "Powrót do listy filmów"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7506,6 +7515,10 @@ msgstr "Wybierz satelitę, którego chcesz skonfigurować. Gdy ten satelita będ
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr "Wybierz satelitę, na którego jest ustawiona twoja antena. Jeśli nie jesteś pewien wybierz 'automatycznie' i odbiornik spróbuje ustalić to za ciebie."
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Wybierz rozdzielczość poziomą:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr "Wybierz głowicę, która steruje obrotnicą."
 
@@ -7529,13 +7542,6 @@ msgstr "Wybierz zestaw znaków klawiatury wirtualnej z 'SHIFT'"
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
 msgstr "Wybierz alternatywny znak (z SHIFT) klawiatury wirtualnej tylko dla kolejnego znaku"
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Wybierz rozdzielczość poziomą:"
-
-msgid "Select timezone in the area or region."
-msgstr ""
 
 msgid "Select update source"
 msgstr "Wybierz źródło aktualizacji"
@@ -7576,6 +7582,10 @@ msgstr "Wybierz nadawcę i wciśnij OK aby rozpocząć skanowanie"
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr "Wybierz swój region. Jeśli nie dostępny, zmień 'Kraj' na 'Wszystkie' i wybierz jedną z domyślnych alternatyw."
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Wybierz rozdzielczość poziomą:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Wybór satelitów 1 (USALS)"
@@ -8672,6 +8682,16 @@ msgstr "Podświetl kanał niżej"
 msgid "Switch channel up"
 msgstr "Podświetl kanał wyżej"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Zobacz listę dostępnych rozszerzeń dla wyświetlacza i GUI"
+
 msgid "Switch to TV mode"
 msgstr "Przełącz w tryb TV"
 
@@ -9252,6 +9272,14 @@ msgstr "Czas"
 msgid "Time scale"
 msgstr "Przedział czasowy"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Strefa czasowa"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Strefa czasowa"
+
 msgid "Timer"
 msgstr "Timery"
 
@@ -9312,10 +9340,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift niemożliwy!"
 
 msgid "Timezone"
-msgstr "Strefa czasowa"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Strefa czasowa"
 
 msgid "Timor-Leste"
@@ -10394,6 +10418,20 @@ msgstr "Z błędami:"
 
 msgid "With popup"
 msgstr "Wyświetl popup"
+
+#, fuzzy
+msgid "With this option you can switch off the display during operation."
+msgstr "Ta opcja pozwala wyłączyć wyświetlacz."
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+#, fuzzy
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr "Ta opcja pozwala wyłączyć wyświetlacz."
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Bez ostrzeżenia"
@@ -11681,6 +11719,9 @@ msgstr "Rozrywka"
 
 msgid "vertical"
 msgstr "Pionowa (V)"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "Czekaj na CI..."
