--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -5755,6 +5755,15 @@ msgstr ""
 msgid "Open the movie list"
 msgstr "Abrir lista de vídeos"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7567,6 +7576,9 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+msgid "Select the time zone within the area or region."
+msgstr ""
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -7589,12 +7601,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-msgid "Select timezone area or region."
-msgstr ""
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 msgid "Select update source"
@@ -7636,6 +7642,9 @@ msgid "Select your provider, and press OK to start the scan"
 msgstr "Selecione a operadora e pressione OK para buscar."
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
+msgstr ""
+
+msgid "Select your time zone area or region."
 msgstr ""
 
 msgid "Selecting satellites 1 (USALS)"
@@ -8757,6 +8766,16 @@ msgstr ""
 msgid "Switch channel up"
 msgstr ""
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Ver extensões de tela e interface do usuário disponíveis."
+
 msgid "Switch to TV mode"
 msgstr ""
 
@@ -9320,6 +9339,14 @@ msgstr "Hora"
 msgid "Time scale"
 msgstr "Escala de tempo"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Fuso horário"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Fuso horário"
+
 msgid "Timer"
 msgstr "Temporizador"
 
@@ -9380,10 +9407,6 @@ msgid "Timeshift not possible!"
 msgstr "Timeshift não permitido!"
 
 msgid "Timezone"
-msgstr "Fuso horário"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Fuso horário"
 
 msgid "Timor-Leste"
@@ -10481,6 +10504,18 @@ msgstr ""
 
 msgid "With popup"
 msgstr "Com popup"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Sem popup"
@@ -11773,6 +11808,9 @@ msgstr "Show de variedades"
 
 msgid "vertical"
 msgstr "Vertical"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "Aguardando CI..."
