--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-21 09:07+0100\n"
+"POT-Creation-Date: 2020-03-22 22:37+0100\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -5832,6 +5832,15 @@ msgstr "Відкрити налаштування тюнера"
 msgid "Open the movie list"
 msgstr "Відкрити список відео"
 
+msgid "Operating LED status in deep standby mode"
+msgstr ""
+
+msgid "Operating LED status in standby mode"
+msgstr ""
+
+msgid "Operating LED status while running."
+msgstr ""
+
 msgid "Opkg"
 msgstr ""
 
@@ -7660,6 +7669,10 @@ msgstr ""
 msgid "Select the satellite your dish receives from. If you are unsure select 'automatic' and the receiver will attempt to determine this for you."
 msgstr ""
 
+#, fuzzy
+msgid "Select the time zone within the area or region."
+msgstr "Впорядкувати по:"
+
 msgid "Select the tuner that controls the motorised dish."
 msgstr ""
 
@@ -7682,13 +7695,6 @@ msgid "Select the virtual keyboard shifted character set"
 msgstr ""
 
 msgid "Select the virtual keyboard shifted character set for the next character only"
-msgstr ""
-
-#, fuzzy
-msgid "Select timezone area or region."
-msgstr "Впорядкувати по:"
-
-msgid "Select timezone in the area or region."
 msgstr ""
 
 msgid "Select update source"
@@ -7731,6 +7737,10 @@ msgstr "Виберіть провайдера і натисніть ОК для 
 
 msgid "Select your region. If not available change 'Country' to 'all' and select one of the default alternatives."
 msgstr ""
+
+#, fuzzy
+msgid "Select your time zone area or region."
+msgstr "Впорядкувати по:"
 
 msgid "Selecting satellites 1 (USALS)"
 msgstr "Вибір супутника 1 (USALS)"
@@ -8853,6 +8863,16 @@ msgstr "Перемикання каналу вниз"
 msgid "Switch channel up"
 msgstr "Перемикання каналу вгору"
 
+msgid "Switch off the display during Standby Mode"
+msgstr ""
+
+msgid "Switch off the display during Suspend Mode"
+msgstr ""
+
+#, fuzzy
+msgid "Switch off the display during operation."
+msgstr "Перегляд списку доступних доповнень налаштувань екрану і інтерфейсу"
+
 msgid "Switch to TV mode"
 msgstr "Перемикання в режим TV"
 
@@ -9460,6 +9480,14 @@ msgstr "Час"
 msgid "Time scale"
 msgstr "Тимчасовий масштаб сітки"
 
+#, fuzzy
+msgid "Time zone"
+msgstr "Часовий пояс"
+
+#, fuzzy
+msgid "Time zone area"
+msgstr "Часовий пояс"
+
 msgid "Timer"
 msgstr "Таймер"
 
@@ -9520,10 +9548,6 @@ msgid "Timeshift not possible!"
 msgstr "Таймшифт не можливий!"
 
 msgid "Timezone"
-msgstr "Часовий пояс"
-
-#, fuzzy
-msgid "Timezone area"
 msgstr "Часовий пояс"
 
 msgid "Timor-Leste"
@@ -10643,6 +10667,18 @@ msgstr "З помилками:"
 
 msgid "With popup"
 msgstr "З повідомленням"
+
+msgid "With this option you can switch off the display during operation."
+msgstr ""
+
+msgid "With this option you can switch off the display in Deep Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch off the display in Standby Mode."
+msgstr ""
+
+msgid "With this option you can switch the LED color or deactivate the LED."
+msgstr ""
 
 msgid "Without popup"
 msgstr "Без повідомлення"
@@ -11954,6 +11990,9 @@ msgstr "шоу вар'єте"
 
 msgid "vertical"
 msgstr "вертикальна"
+
+msgid "violet"
+msgstr ""
 
 msgid "wait for ci..."
 msgstr "очікування ci..."
